Fixed bugs and scrollbar

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,7 +19,6 @@ body {
   background-color: var(--body-bg);
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 
   header {
     width: 100%;
@@ -30,6 +29,7 @@ body {
     background-color: var(--header-bg);
     padding: 12px 16px;
     text-align: center;
+    overflow: hidden;
 
     .cafeIcon {
       width: 45px;
@@ -63,6 +63,7 @@ body {
     height: 100%;
     padding: 12px 16px;
     position: relative;
+    overflow: hidden;
 
     .mainTitle {
       position: absolute;
@@ -131,6 +132,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: var(--footer-bg);
+    overflow: hidden;
 
     h4 {
       color: aliceblue;
